Update FilterValueMapperTest.java