@@ -13,6 +13,7 @@ import gov.cdc.nbs.report.models.AdvancedQuery;
 import gov.cdc.nbs.report.models.BasicFilterRequest;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.UUID;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -54,7 +55,8 @@ class FilterValueMapperTest {
       List<FilterValue> result = mapper.fromBasicFilterRequest(mockReportFilter, request);
 
       assertThat(result).hasSize(1);
-      FilterValue filterValue = result.get(0);
+      FilterValue filterValue = result.getFirst();
+
       assertThat(filterValue.getId()).isEqualTo(generatedId);
       assertThat(filterValue.getReportFilter()).isEqualTo(mockReportFilter);
       assertThat(filterValue.getValueType()).isEqualTo(ReportConstants.BASIC_FILTER_VALUE_TYPE);
@@ -95,19 +97,6 @@ class FilterValueMapperTest {
     }
 
     @Test
-    void fromBasicFilterRequest_should_create_filter_values_with_special_characters() {
-      List<String> values = List.of("value@123", "test-value", "value_with_underscore");
-      BasicFilterRequest request = new BasicFilterRequest(1L, values, false);
-
-      List<FilterValue> result = mapper.fromBasicFilterRequest(mockReportFilter, request);
-
-      assertThat(result).hasSize(3);
-      assertThat(result.get(0).getValueTxt()).isEqualTo("value@123");
-      assertThat(result.get(1).getValueTxt()).isEqualTo("test-value");
-      assertThat(result.get(2).getValueTxt()).isEqualTo("value_with_underscore");
-    }
-
-    @Test
     void fromBasicFilterRequest_should_generate_unique_ids_for_each_value() {
       List<String> values = List.of("value1", "value2");
       BasicFilterRequest request = new BasicFilterRequest(1L, values, false);
@@ -131,20 +120,6 @@ class FilterValueMapperTest {
     }
 
     @Test
-    void fromBasicFilterRequest_should_respect_includeNulls_flag() {
-      List<String> values = List.of("value1");
-      BasicFilterRequest requestWithoutNulls = new BasicFilterRequest(1L, values, false);
-      BasicFilterRequest requestWithNulls = new BasicFilterRequest(1L, values, true);
-
-      List<FilterValue> result1 =
-          mapper.fromBasicFilterRequest(mockReportFilter, requestWithoutNulls);
-      List<FilterValue> result2 = mapper.fromBasicFilterRequest(mockReportFilter, requestWithNulls);
-
-      assertThat(result1).hasSize(1);
-      assertThat(result2).hasSize(1);
-    }
-
-    @Test
     void fromBasicFilterRequest_should_handle_empty_list() {
       List<String> values = new ArrayList<>();
       BasicFilterRequest request = new BasicFilterRequest(1L, values, false);
@@ -153,132 +128,81 @@ class FilterValueMapperTest {
 
       assertThat(result).isEmpty();
     }
-
-    @Test
-    void fromBasicFilterRequest_should_handle_very_long_values() {
-      String longValue = "a".repeat(1000);
-      List<String> values = List.of(longValue);
-      BasicFilterRequest request = new BasicFilterRequest(1L, values, false);
-
-      List<FilterValue> result = mapper.fromBasicFilterRequest(mockReportFilter, request);
-
-      assertThat(result).hasSize(1);
-      assertThat(result.get(0).getValueTxt()).isEqualTo(longValue);
-    }
   }
 
   @Nested
   class FromAdvancedFilterRequest {
 
+    private void assertMatchingClauseValue(
+        FilterValue filterValue, AdvancedQuery.Rule rule, int sequenceNumber) {
+      assertThat(filterValue.getValueType())
+          .isEqualTo(ReportConstants.AdvancedFilterValueType.CLAUSE.toString());
+      assertThat(filterValue.getColumnUid()).isEqualTo(rule.columnId());
+      assertThat(filterValue.getOperator()).isEqualTo(rule.operator());
+      assertThat(filterValue.getValueTxt()).isEqualTo(rule.value());
+      assertThat(filterValue.getSequenceNumber()).isEqualTo(sequenceNumber);
+    }
+
+    private void assertMatchingOperatorValue(
+        FilterValue filterValue, String operator, int sequenceNumber) {
+      assertThat(filterValue.getValueType())
+          .isEqualTo(ReportConstants.AdvancedFilterValueType.OPERATOR.toString());
+      assertThat(filterValue.getOperator()).isEqualTo(operator);
+      assertThat(filterValue.getSequenceNumber()).isEqualTo(sequenceNumber);
+    }
+
     @Test
     void fromAdvancedFilterRequest_should_create_filter_values_with_single_rule() {
-      AdvancedQuery.Rule rule = new AdvancedQuery.Rule("rule1", 1L, "EQUALS", "value1");
+      AdvancedQuery.Rule rule =
+          new AdvancedQuery.Rule(
+              UUID.randomUUID().toString(), 1L, ReportConstants.Operator.EQ.toString(), "value1");
       AdvancedQuery.RuleGroup ruleGroup =
           new AdvancedQuery.RuleGroup(
-              "group1", ReportConstants.QueryCombinators.AND, List.of(rule));
+              UUID.randomUUID().toString(), ReportConstants.QueryCombinators.AND, List.of(rule));
       AdvancedFilterRequest request = new AdvancedFilterRequest(1L, ruleGroup);
 
       List<FilterValue> result = mapper.fromAdvancedFilterRequest(mockReportFilter, request);
 
       assertThat(result).hasSize(3);
-      assertThat(result.get(0).getOperator()).isEqualTo("(");
 
-      assertThat(result.get(1).getValueType())
-          .isEqualTo(ReportConstants.AdvancedFilterValueType.CLAUSE.toString());
-      assertThat(result.get(1).getColumnUid()).isEqualTo(1L);
-      assertThat(result.get(1).getOperator()).isEqualTo("EQUALS");
-      assertThat(result.get(1).getValueTxt()).isEqualTo("value1");
-
-      assertThat(result.get(2).getOperator()).isEqualTo(")");
+      assertMatchingOperatorValue(result.getFirst(), "(", 1);
+      assertMatchingClauseValue(result.get(1), rule, 2);
+      assertMatchingOperatorValue(result.getLast(), ")", 3);
     }
 
     @Test
     void fromAdvancedFilterRequest_should_create_filter_values_with_multiple_rules() {
-      AdvancedQuery.Rule rule1 = new AdvancedQuery.Rule("rule1", 1L, "EQUALS", "value1");
-      AdvancedQuery.Rule rule2 = new AdvancedQuery.Rule("rule2", 2L, "NOT_EQUALS", "value2");
+      AdvancedQuery.Rule rule1 =
+          new AdvancedQuery.Rule(
+              UUID.randomUUID().toString(), 1L, ReportConstants.Operator.EQ.toString(), "value1");
+      AdvancedQuery.Rule rule2 =
+          new AdvancedQuery.Rule(
+              UUID.randomUUID().toString(), 2L, ReportConstants.Operator.NE.toString(), "value2");
       AdvancedQuery.RuleGroup ruleGroup =
           new AdvancedQuery.RuleGroup(
-              "group1", ReportConstants.QueryCombinators.AND, List.of(rule1, rule2));
+              UUID.randomUUID().toString(),
+              ReportConstants.QueryCombinators.AND,
+              List.of(rule1, rule2));
       AdvancedFilterRequest request = new AdvancedFilterRequest(1L, ruleGroup);
 
       List<FilterValue> result = mapper.fromAdvancedFilterRequest(mockReportFilter, request);
 
       assertThat(result).hasSize(5);
-      assertThat(result.get(0).getOperator()).isEqualTo("(");
 
-      assertThat(result.get(1).getValueType())
-          .isEqualTo(ReportConstants.AdvancedFilterValueType.CLAUSE.toString());
-      assertThat(result.get(1).getColumnUid()).isEqualTo(1L);
-      assertThat(result.get(1).getOperator()).isEqualTo("EQUALS");
-      assertThat(result.get(1).getValueTxt()).isEqualTo("value1");
+      assertMatchingOperatorValue(result.getFirst(), "(", 1);
 
-      assertThat(result.get(2).getValueType())
-          .isEqualTo(ReportConstants.AdvancedFilterValueType.OPERATOR.toString());
-      assertThat(result.get(2).getOperator())
-          .isEqualTo(ReportConstants.QueryCombinators.AND.toString());
+      assertMatchingClauseValue(result.get(1), rule1, 2);
+      assertMatchingOperatorValue(
+          result.get(2), ReportConstants.QueryCombinators.AND.toString(), 3);
+      assertMatchingClauseValue(result.get(3), rule2, 4);
 
-      assertThat(result.get(3).getValueType())
-          .isEqualTo(ReportConstants.AdvancedFilterValueType.CLAUSE.toString());
-      assertThat(result.get(3).getColumnUid()).isEqualTo(2L);
-      assertThat(result.get(3).getOperator()).isEqualTo("NOT_EQUALS");
-      assertThat(result.get(3).getValueTxt()).isEqualTo("value2");
-
-      assertThat(result.get(4).getOperator()).isEqualTo(")");
-    }
-
-    @Test
-    void fromAdvancedFilterRequest_should_set_correct_sequence_numbers() {
-      AdvancedQuery.Rule rule1 = new AdvancedQuery.Rule("rule1", 1L, "EQUALS", "value1");
-      AdvancedQuery.Rule rule2 = new AdvancedQuery.Rule("rule2", 2L, "EQUALS", "value2");
-      AdvancedQuery.RuleGroup ruleGroup =
-          new AdvancedQuery.RuleGroup(
-              "group1", ReportConstants.QueryCombinators.AND, List.of(rule1, rule2));
-      AdvancedFilterRequest request = new AdvancedFilterRequest(1L, ruleGroup);
-
-      List<FilterValue> result = mapper.fromAdvancedFilterRequest(mockReportFilter, request);
-
-      assertThat(result.get(0).getSequenceNumber()).isEqualTo(1);
-      assertThat(result.get(1).getSequenceNumber()).isEqualTo(2);
-      assertThat(result.get(2).getSequenceNumber()).isEqualTo(3);
-    }
-
-    @Test
-    void fromAdvancedFilterRequest_should_set_clause_properties() {
-      AdvancedQuery.Rule rule = new AdvancedQuery.Rule("rule1", 99L, "CONTAINS", "testValue");
-      AdvancedQuery.RuleGroup ruleGroup =
-          new AdvancedQuery.RuleGroup(
-              "group1", ReportConstants.QueryCombinators.AND, List.of(rule));
-      AdvancedFilterRequest request = new AdvancedFilterRequest(1L, ruleGroup);
-
-      List<FilterValue> result = mapper.fromAdvancedFilterRequest(mockReportFilter, request);
-
-      FilterValue clause = result.get(1);
-      assertThat(clause.getValueType())
-          .isEqualTo(ReportConstants.AdvancedFilterValueType.CLAUSE.toString());
-      assertThat(clause.getColumnUid()).isEqualTo(99L);
-      assertThat(clause.getOperator()).isEqualTo("CONTAINS");
-      assertThat(clause.getValueTxt()).isEqualTo("testValue");
-    }
-
-    @Test
-    void fromAdvancedFilterRequest_should_set_operator_properties() {
-      AdvancedQuery.Rule rule = new AdvancedQuery.Rule("rule1", 1L, "EQUALS", "value1");
-      AdvancedQuery.RuleGroup ruleGroup =
-          new AdvancedQuery.RuleGroup(
-              "group1", ReportConstants.QueryCombinators.AND, List.of(rule));
-      AdvancedFilterRequest request = new AdvancedFilterRequest(1L, ruleGroup);
-
-      List<FilterValue> result = mapper.fromAdvancedFilterRequest(mockReportFilter, request);
-
-      FilterValue operator = result.get(0);
-      assertThat(operator.getValueType())
-          .isEqualTo(ReportConstants.AdvancedFilterValueType.OPERATOR.toString());
-      assertThat(operator.getOperator()).isEqualTo("(");
+      assertMatchingOperatorValue(result.getLast(), ")", 5);
     }
 
     @Test
     void fromAdvancedFilterRequest_should_generate_unique_ids() {
-      AdvancedQuery.Rule rule = new AdvancedQuery.Rule("rule1", 1L, "EQUALS", "value1");
+      AdvancedQuery.Rule rule =
+          new AdvancedQuery.Rule(UUID.randomUUID().toString(), 1L, "EQUALS", "value1");
       AdvancedQuery.RuleGroup ruleGroup =
           new AdvancedQuery.RuleGroup(
               "group1", ReportConstants.QueryCombinators.AND, List.of(rule));
@@ -291,151 +215,46 @@ class FilterValueMapperTest {
 
     @Test
     void fromAdvancedFilterRequest_should_handle_nested_rule_groups() {
-      AdvancedQuery.Rule rule1 = new AdvancedQuery.Rule("rule1", 1L, "EQUALS", "value1");
-      AdvancedQuery.Rule rule2 = new AdvancedQuery.Rule("rule2", 2L, "EQUALS", "value2");
+      AdvancedQuery.Rule rule1 =
+          new AdvancedQuery.Rule(
+              UUID.randomUUID().toString(), 1L, ReportConstants.Operator.EQ.toString(), "value1");
+      AdvancedQuery.Rule rule2 =
+          new AdvancedQuery.Rule(
+              UUID.randomUUID().toString(), 2L, ReportConstants.Operator.NE.toString(), "value2");
+      AdvancedQuery.Rule rule3 =
+          new AdvancedQuery.Rule(
+              UUID.randomUUID().toString(), 3L, ReportConstants.Operator.NE.toString(), "value3");
 
       AdvancedQuery.RuleGroup nestedGroup =
           new AdvancedQuery.RuleGroup(
-              "nested", ReportConstants.QueryCombinators.OR, List.of(rule2));
-      AdvancedQuery.RuleGroup outerGroup =
+              UUID.randomUUID().toString(),
+              ReportConstants.QueryCombinators.OR,
+              List.of(rule2, rule3));
+
+      AdvancedQuery.RuleGroup rootGroup =
           new AdvancedQuery.RuleGroup(
-              "outer",
+              UUID.randomUUID().toString(),
               ReportConstants.QueryCombinators.AND,
               new ArrayList<>(List.of(rule1, nestedGroup)));
 
-      AdvancedFilterRequest request = new AdvancedFilterRequest(1L, outerGroup);
+      AdvancedFilterRequest request = new AdvancedFilterRequest(1L, rootGroup);
 
       List<FilterValue> result = mapper.fromAdvancedFilterRequest(mockReportFilter, request);
 
-      assertThat(result).isNotEmpty();
-      assertThat(result).anySatisfy(fv -> assertThat(fv.getOperator()).isEqualTo("("));
-      assertThat(result).anySatisfy(fv -> assertThat(fv.getOperator()).isEqualTo(")"));
-    }
+      assertThat(result).hasSize(9);
 
-    @Test
-    void fromAdvancedFilterRequest_should_handle_or_combinator() {
-      AdvancedQuery.Rule rule1 = new AdvancedQuery.Rule("rule1", 1L, "EQUALS", "value1");
-      AdvancedQuery.Rule rule2 = new AdvancedQuery.Rule("rule2", 2L, "EQUALS", "value2");
-      AdvancedQuery.RuleGroup ruleGroup =
-          new AdvancedQuery.RuleGroup(
-              "group1", ReportConstants.QueryCombinators.OR, List.of(rule1, rule2));
-      AdvancedFilterRequest request = new AdvancedFilterRequest(1L, ruleGroup);
+      assertMatchingOperatorValue(result.getFirst(), "(", 1);
 
-      List<FilterValue> result = mapper.fromAdvancedFilterRequest(mockReportFilter, request);
+      assertMatchingClauseValue(result.get(1), rule1, 2);
+      assertMatchingOperatorValue(
+          result.get(2), ReportConstants.QueryCombinators.AND.toString(), 3);
+      assertMatchingOperatorValue(result.get(3), "(", 4);
+      assertMatchingClauseValue(result.get(4), rule2, 5);
+      assertMatchingOperatorValue(result.get(5), ReportConstants.QueryCombinators.OR.toString(), 6);
+      assertMatchingClauseValue(result.get(6), rule3, 7);
+      assertMatchingOperatorValue(result.get(7), ")", 8);
 
-      assertThat(result).hasSize(5);
-      assertThat(result.get(2).getOperator()).isNotNull();
-      assertThat(result.get(2).getOperator())
-          .isEqualTo(ReportConstants.QueryCombinators.OR.toString());
-    }
-
-    @Test
-    void fromAdvancedFilterRequest_should_handle_single_rule_group_with_no_operator() {
-      AdvancedQuery.Rule rule = new AdvancedQuery.Rule("rule1", 1L, "EQUALS", "value1");
-      AdvancedQuery.RuleGroup ruleGroup =
-          new AdvancedQuery.RuleGroup(
-              "group1", ReportConstants.QueryCombinators.AND, List.of(rule));
-      AdvancedFilterRequest request = new AdvancedFilterRequest(1L, ruleGroup);
-
-      List<FilterValue> result = mapper.fromAdvancedFilterRequest(mockReportFilter, request);
-
-      assertThat(result).hasSize(3);
-      assertThat(result.get(1).getOperator()).isEqualTo("EQUALS");
-      assertThat(result.get(1).getValueTxt()).isEqualTo("value1");
-    }
-
-    @Test
-    void fromAdvancedFilterRequest_should_have_matching_parentheses() {
-      AdvancedQuery.Rule rule = new AdvancedQuery.Rule("rule1", 1L, "EQUALS", "value1");
-      AdvancedQuery.RuleGroup ruleGroup =
-          new AdvancedQuery.RuleGroup(
-              "group1", ReportConstants.QueryCombinators.AND, List.of(rule));
-      AdvancedFilterRequest request = new AdvancedFilterRequest(1L, ruleGroup);
-
-      List<FilterValue> result = mapper.fromAdvancedFilterRequest(mockReportFilter, request);
-
-      long openParens = result.stream().filter(fv -> "(".equals(fv.getOperator())).count();
-      long closeParens = result.stream().filter(fv -> ")".equals(fv.getOperator())).count();
-
-      assertThat(openParens).isEqualTo(closeParens);
-    }
-
-    @Test
-    void fromAdvancedFilterRequest_should_set_report_filter_for_all_values() {
-      AdvancedQuery.Rule rule = new AdvancedQuery.Rule("rule1", 1L, "EQUALS", "value1");
-      AdvancedQuery.RuleGroup ruleGroup =
-          new AdvancedQuery.RuleGroup(
-              "group1", ReportConstants.QueryCombinators.AND, List.of(rule));
-      AdvancedFilterRequest request = new AdvancedFilterRequest(1L, ruleGroup);
-
-      List<FilterValue> result = mapper.fromAdvancedFilterRequest(mockReportFilter, request);
-
-      assertThat(result)
-          .allSatisfy(fv -> assertThat(fv.getReportFilter()).isEqualTo(mockReportFilter));
-    }
-
-    @Test
-    void fromAdvancedFilterRequest_should_increment_sequence_numbers_across_calls() {
-      AdvancedQuery.Rule rule1 = new AdvancedQuery.Rule("rule1", 1L, "EQUALS", "value1");
-      AdvancedQuery.RuleGroup ruleGroup1 =
-          new AdvancedQuery.RuleGroup(
-              "group1", ReportConstants.QueryCombinators.AND, List.of(rule1));
-      AdvancedFilterRequest request1 = new AdvancedFilterRequest(1L, ruleGroup1);
-
-      List<FilterValue> result1 = mapper.fromAdvancedFilterRequest(mockReportFilter, request1);
-      int lastSequence1 = result1.stream().mapToInt(FilterValue::getSequenceNumber).max().orElse(0);
-
-      AdvancedQuery.Rule rule2 = new AdvancedQuery.Rule("rule2", 2L, "EQUALS", "value2");
-      AdvancedQuery.RuleGroup ruleGroup2 =
-          new AdvancedQuery.RuleGroup(
-              "group2", ReportConstants.QueryCombinators.AND, List.of(rule2));
-      AdvancedFilterRequest request2 = new AdvancedFilterRequest(1L, ruleGroup2);
-
-      List<FilterValue> result2 = mapper.fromAdvancedFilterRequest(mockReportFilter, request2);
-      int firstSequence2 =
-          result2.stream().mapToInt(FilterValue::getSequenceNumber).min().orElse(0);
-
-      assertThat(firstSequence2).isGreaterThan(lastSequence1);
-    }
-
-    @Test
-    void fromAdvancedFilterRequest_should_have_non_zero_sequence_numbers() {
-      AdvancedQuery.Rule rule = new AdvancedQuery.Rule("rule1", 1L, "EQUALS", "value1");
-      AdvancedQuery.RuleGroup ruleGroup =
-          new AdvancedQuery.RuleGroup(
-              "group1", ReportConstants.QueryCombinators.AND, List.of(rule));
-      AdvancedFilterRequest request = new AdvancedFilterRequest(1L, ruleGroup);
-
-      List<FilterValue> result = mapper.fromAdvancedFilterRequest(mockReportFilter, request);
-
-      assertThat(result)
-          .filteredOn(fv -> fv.getSequenceNumber() != null)
-          .allSatisfy(fv -> assertThat(fv.getSequenceNumber()).isGreaterThan(0));
-    }
-
-    @Test
-    void fromAdvancedFilterRequest_should_handle_multiple_nested_groups() {
-      AdvancedQuery.Rule rule1 = new AdvancedQuery.Rule("rule1", 1L, "EQUALS", "value1");
-      AdvancedQuery.Rule rule2 = new AdvancedQuery.Rule("rule2", 2L, "EQUALS", "value2");
-
-      AdvancedQuery.RuleGroup nestedGroup1 =
-          new AdvancedQuery.RuleGroup(
-              "nested1", ReportConstants.QueryCombinators.AND, List.of(rule1));
-      AdvancedQuery.RuleGroup nestedGroup2 =
-          new AdvancedQuery.RuleGroup(
-              "nested2", ReportConstants.QueryCombinators.OR, List.of(rule2));
-
-      AdvancedQuery.RuleGroup outerGroup =
-          new AdvancedQuery.RuleGroup(
-              "outer",
-              ReportConstants.QueryCombinators.AND,
-              new ArrayList<>(List.of(nestedGroup1, nestedGroup2)));
-
-      AdvancedFilterRequest request = new AdvancedFilterRequest(1L, outerGroup);
-
-      List<FilterValue> result = mapper.fromAdvancedFilterRequest(mockReportFilter, request);
-
-      assertThat(result).isNotEmpty();
+      assertMatchingOperatorValue(result.getLast(), ")", 9);
     }
   }
 }
